tests/errors/preprocessor/ident_begins_with_letters.c
#define 1KEK 1

int main()
{
	return 0;
}
